<resources>
    <string name="app_name">Happid</string>
    <string name="find_nearest_local">Find Nearest Local</string>
    <string name="todo">TODO</string>
    <string name="market">Market</string>
    <string name="get_started">Get Started</string>
    <string name="best_markitplac">Best Markitplac</string>
    <string name="On_Time_Departures">O On-Time Departures. Pay just for your seat. No Refusal from our end. Spacious &amp; Comfortable Seating. Female passengers safety standards. Onboard Refreshments. Cab Tracking through Maps</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_your_verification_code">Enter Your Verification Code</string>
    <string name="hello_welcome_back_to_our_account">Hello, Welcome Back to Our Account</string>
    <string name="_0_0_0_0">0 0 0 0 0   0 0 0 0 0</string>
    <string name="request_otp">Request OTP</string>
    <string name="login_with">Login With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions ]]></string>
    <string name="and">And</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="by_creating_passcode_you_agree_with_our">By creating passcode you agree with our</string>
    <string name="_0_0_0_01">0 0 0 0</string>
    <string name="we_have_sent_the_code_verification_to_nyour_mobile_number">We Have Sent The Code Verification To\nYour Mobile Number</string>
    <string name="_91_0000000000">+91 0000000000</string>
    <string name="submit">Submit</string>
    <string name="resend">Resend</string>
    <string name="create_profile">Create Profile</string>
    <string name="set_profile">Set Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pick_your_current_location">Pick Your Current Location</string>
    <string name="post_code">Post Code</string>
    <string name="select_post_code_or_address">Select Post Code Or Address</string>
    <string name="or">Or</string>
    <string name="phone">Phone</string>
</resources>