<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activitys.CreateProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/create_profile"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/profile_image"
        app:layout_constraintTop_toBottomOf="@id/text2"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/set_profile"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/ivProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/first_name"
        android:textSize="14sp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:background="@drawable/light_cream_background"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txFirstName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/last_name"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:background="@drawable/light_cream_background"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txLastName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/phone"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/etLastName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="number"
        android:textColor="@color/textColor"
        android:background="@drawable/light_cream_background"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txPhone"
        android:importantForAutofill="no" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        android:background="@drawable/orange_button_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/pick_your_current_location"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/baseline_my_location_24"
            android:contentDescription="@string/todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/or"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/post_code"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txOr"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPost"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/select_post_code_or_address"
        android:textColor="@color/textColor"
        android:background="@drawable/light_cream_background"
        android:paddingStart="10dp"
        android:textColorHint="@color/textHintColor"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txPost" />

        <LinearLayout
            android:id="@+id/llButtonSubmit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintTop_toBottomOf="@+id/etPost"
            android:background="@drawable/purple_button_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>