<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activitys.Login">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/enter_your_mobile_number"
        android:textColor="@color/textColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />


    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/hello_welcome_back_to_our_account"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:weightSum="2"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2">

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.6"
            android:background="@drawable/light_cream_background"
            android:gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="IND"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="false"/>

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.4"
            android:layout_marginStart="10dp"
            android:maxLength="10"
            android:inputType="number"
            android:textColorHint="@color/textHintColor"
            android:textColor="@color/textColor"
            android:background="@drawable/light_cream_background"
            android:hint="@string/_0_0_0_0"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toEndOf="@id/country_code"
            app:layout_constraintTop_toBottomOf="@id/text2"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOtpButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/purple_button_background"
        app:layout_constraintTop_toBottomOf="@id/ll2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/request_otp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/llOtpButton"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:background="@color/textColor"
            android:layout_height="0.5dp"/>

        <TextView
            android:id="@+id/txLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/login_with"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />


        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:background="@color/textColor"
            android:layout_height="0.5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSocial"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llLogin"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:background="@drawable/light_cream_background"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="24dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:padding="5dp"
            android:contentDescription="@string/todo"
            android:layout_marginStart="10dp"
            android:layout_height="56dp"
            android:src="@drawable/google"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/google"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text1" />


        </LinearLayout>

        <LinearLayout
            android:background="@drawable/light_cream_background"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:layout_height="56dp"
                android:src="@drawable/facebook"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/facebook"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text1" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/by_creating_passcode_you_agree_with_our"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llText"/>

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:id="@+id/llText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/terms_conditions"
            android:textColor="#FF7F5D"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:text=" And "
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/privacy_policy"
            android:textColor="#FF7F5D"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>